--- a/290725.html
+++ b/290725.html
@@ -11,5 +11,7 @@
         <br> Voltar aos preços do pix de 1.10%
         <br> Menu e dropdown
     </p>
+    <h1>Commit 30/07/2025 1.1</h1>
+    <p>Adicinado ao footer.tsx : CNPJ 48.120.319/0001-87</p>
 </body>
 </html>
